--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
     <div class="navbar-header"> 
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="myNavbar">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"> </span>
             <span class="icon-bar"> </span>
             <span class="icon-bar"> </span>
@@ -26,6 +26,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav"> 
             <li> <a href="#welcome"> Home </a> </li>
+            <li> <a hreaf="bio"> Bio</a></li>
             <li> <a href="#videos"> Videos </a> </li>
             <li> <a href="#work"> Work </a> </li>
             <li> <a href="#writings"> Writings </a> </li>
