--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <span class="icon-bar"> </span>
             <span class="icon-bar"> </span>
         </button>
-        <a class="navbar-brand" href="#"> Kaveri Samanta </a>
+        <a class="navbar-brand" href="https://kavericodes.github.io/project57-60/"> Kaveri Samanta </a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav"> 
